--- a/map.css
+++ b/map.css
@@ -1,7 +1,6 @@
 html,
 body {
   margin: 0;
-  padding: 5;
   height: 100%;
   width: 100%;
   display: flex;
@@ -14,4 +13,16 @@ body {
   height: 100%; /* Adjust height to your desired size */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: subtle shadow for effect */
   border-radius: 8px; /* Optional: rounded corners */
+}
+
+#map svg {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+#map svg circle {
+  pointer-events: auto !important;
 }
